fixed bg transition and nav collapse box shadow

--- a/src/scss/default/_default.scss
+++ b/src/scss/default/_default.scss
@@ -3267,10 +3267,10 @@ input, select, textarea {
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../images/elsn_org.jpg"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
+			background-image: url("../../images/elsn_org_dark.jpg"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg_dark.jpg");
 			background-size: cover;
 			background-position: center,								center,														top center;
-			background-repeat: repeat,								no-repeat,													no-repeat;
+			background-repeat: no-repeat,								no-repeat,													repeat;
 			background-attachment: scroll,								scroll,														scroll;
 			z-index: -1;
 		}
@@ -3287,29 +3287,31 @@ input, select, textarea {
 			-webkit-transition: opacity 1s ease-in-out;
 			-ms-transition: opacity 1s ease-in-out;
 			transition: opacity 1s ease-in-out;
-			-moz-transition-delay: 0.75s;
-			-webkit-transition-delay: 0.75s;
-			-ms-transition-delay: 0.75s;
-			transition-delay: 0.75s;
-			background: #1e252d;
+			/* -moz-transition-delay: 0.35s;
+			-webkit-transition-delay: 0.35s;
+			-ms-transition-delay: 0.35s;
+			transition-delay: 0.35s; */
+			background: #050507;
 			content: '';
-			display: block;
+			display: block !important; // had to add important for before element to show up
 			height: 100%;
 			left: 0;
 			opacity: 0;
-			position: fixed;
+			position: fixed; 
 			top: 0;
 			width: 100%;
 		}
 
 		body.is-preload #wrapper.fade-in:before {
-			opacity: 1;
+			opacity: 1 !important;
 		}
 
 		@media screen and (orientation: portrait) {
 
 			#wrapper > .bg {
-				background-size: auto,								auto,														auto 175%;
+				/* background-size: auto,								auto,														auto 175%; */
+				background-size: 100%, 100%, 100%;
+				background-position: top center, center, top center;
 			}
 
 		}
@@ -3339,6 +3341,7 @@ input, select, textarea {
 		-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
 		-ms-transition: opacity 1s ease, -ms-transform 1s ease;
 		transition: opacity 1s ease, transform 1s ease;
+		
 		position: relative;
 		cursor: default;
 		text-align: center;
@@ -3474,6 +3477,7 @@ input, select, textarea {
 			-webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease, visibility 0.5s;
 			-ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease, visibility 0.5s;
 			transition: opacity 0.5s ease, transform 0.5s ease, visibility 0.5s;
+			
 			opacity: 0;
 			visibility: hidden;
 		}
@@ -3495,6 +3499,15 @@ input, select, textarea {
 			opacity: 0 !important; //i dadded all !important also here
 		}
 
+		#intro:not(.hidden) {
+			// --
+		-moz-transition-delay: 1.2s;
+		-webkit-transition-delay: 1.2s;
+		-ms-transition-delay: 1.2s;
+		transition-delay: 1.2s;
+		// added jank by me
+		}
+
 			body.is-preload #intro:not(.hidden) + #header + #nav {
 				-moz-transform: translateY(4rem) !important;
 				-webkit-transform: translateY(4rem) !important;
@@ -3507,7 +3520,7 @@ input, select, textarea {
 
 			#intro {
 				padding: 4rem 4rem 2rem 4rem ;
-				min-height: 90vh;
+				min-height: 60vh; // was 90
 			}
 
 				#intro p br {
@@ -3524,7 +3537,7 @@ input, select, textarea {
 
 			#intro {
 				padding: 3rem 2rem 1rem 2rem ;
-				min-height: 80vh;
+				min-height: 47vh; // was 80
 			}
 
 				#intro h1 {
@@ -3674,6 +3687,12 @@ input, select, textarea {
 		-webkit-transition: -webkit-transform 1s ease, opacity 1s ease;
 		-ms-transition: -ms-transform 1s ease, opacity 1s ease;
 		transition: transform 1s ease, opacity 1s ease;
+		// --
+		-moz-transition-delay: 0.50s;
+		-webkit-transition-delay: 0.50s;
+		-ms-transition-delay: 0.50s;
+		transition-delay: 0.50s;
+		// added by me
 		background: rgba(255, 255, 255, 0.385);
 		height: 4rem;
 		line-height: 4rem;
@@ -4561,11 +4580,12 @@ input, select, textarea {
 		border: 0;
 		color: #ffffff;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
-		font-size: 0.9rem;
+		font-size: 1.2rem;
 		font-weight: 900;
 		letter-spacing: 0.075em;
 		padding: 0.375rem 1.25rem;
 		text-transform: uppercase;
+		text-shadow: 0px 1px 12px rgba(0,0,0,0.75);
 		z-index: 10001;
 	}
 
@@ -4591,6 +4611,7 @@ input, select, textarea {
 			background-color: rgba(255, 255, 255, 0.875);
 			box-shadow: 0 0.125rem 0.75rem 0 rgba(30, 37, 45, 0.25);
 			color: #212931;
+			text-shadow: none;
 		}
 
 			#navPanelToggle.alt:hover {
@@ -4608,7 +4629,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#navPanelToggle {
-				font-size: 0.8rem;
+				/* font-size: 0.8rem; */
 				padding: 0.25rem 1rem;
 			}
 
